[package]
name = "deoxysii"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Deoxys-II-256-128 MRAE primitives for Rust"
repository = "https://github.com/oasislabs/deoxysii-rust"
license = "MIT"
edition = "2018"

[dependencies]
failure = { version = "0.1", default-features = false, features = ["derive"] }
subtle = "2.0"
zeroize = "0.6"

[dev-dependencies]
base64 = "0.10"
rand = "0.6"
serde_json = "1.0"

[profile.release]
incremental = false
lto = true
opt-level = 3
