[package]
name = "deoxysii"
version = "0.2.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Deoxys-II-256-128 MRAE primitives for Rust"
repository = "https://github.com/oasisprotocol/deoxysii-rust"
license = "MIT"
edition = "2018"

[dependencies]
subtle = "2.0"
thiserror = "1.0"
zeroize = "0.6"

[dev-dependencies]
base64 = "0.10"
rand = "0.6"
serde_json = "1.0"

[profile.release]
incremental = false
lto = true
opt-level = 3
