[package]
name = "deoxysii"
version = "0.2.1"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Deoxys-II-256-128 MRAE primitives for Rust"
repository = "https://github.com/oasisprotocol/deoxysii-rust"
license = "MIT"
edition = "2018"

[dependencies]
subtle = "2.0"
thiserror = "1.0"
zeroize = { version = "1.3", features = ["zeroize_derive"] }

[dev-dependencies]
base64 = "0.13"
criterion = "0.3"
rand = "0.8"
serde_json = "1.0"

[[bench]]
name = "mrae"
harness = false
